--- a/home/.config/waybar/style.css
+++ b/home/.config/waybar/style.css
@@ -16,30 +16,30 @@ window#waybar {
 
 #workspaces {
     background: #282828;
-    margin: 5px 5px 5px 5px;
-    padding: 0px 5px 0px 5px;
-    border-radius: 16px;
+    padding: 0px 0px 0px 0px;
+    border-radius: 0px 17px 17px 0px;
     border: solid 0px #f4d9e1;
     font-weight: normal;
     font-style: normal;
 }
 
 #workspaces button {
-    padding: 0px 5px;
-    border-radius: 16px;
+    /*padding: 0px 9px;*/
+    margin: 0px 3px;
+    border-radius: 20px;
     color: #928374;
 }
 
 #workspaces button.active {
     color: #f4d9e1;
     background-color: transparent;
-    border-radius: 16px;
+    border-radius: 20px;
 }
 
 #workspaces button:hover {
-    background-color: #E6B9C6;
+    background-color: #7EBAE4;
     color: black;
-    border-radius: 16px;
+    border-radius: 20px;
 }
 
 #custom-date,
@@ -141,9 +141,9 @@ window#waybar {
 #custom-launcher {
     color: #7EBAE4;
     background-color: #282828;
-    border-radius: 0px 24px 0px 0px;
+    border-radius: 0px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
-    padding: 0 20px 0 13px;
+    padding: 0 10px 0 10px;
     /*border-right: solid 1px #282738;*/
     font-size: 18px;
 }
