--- a/home/.config/waybar/style.css
+++ b/home/.config/waybar/style.css
@@ -1,18 +1,17 @@
 /* dracula theme */
-@define-color Nix-Logo       #7EBAE4;
-@define-color Background-a   rgba(40, 42, 54, 0.8);
-@define-color Background     #282a36;
-@define-color Current-Line   #44475a;
-@define-color Selection      #44475a;
-@define-color Foreground     #f8f8f2;
-@define-color Comment        #6272a4;
-@define-color Cyan           #8be9fd;
-@define-color Green          #50fa7b;
-@define-color Orange         #ffb86c;
-@define-color Pink           #ff79c6;
-@define-color Purple         #bd93f9;
-@define-color Red            #ff5555;
-@define-color Yellow         #f1fa8c;
+@define-color Nix-Logo            #7EBAE4;
+@define-color background-darker   rgba(30, 31, 41, 230);
+@define-color background          #282a36;
+@define-color selection           #44475a;
+@define-color foreground          #f8f8f2;
+@define-color comment             #6272a4;
+@define-color cyan                #8be9fd;
+@define-color green               #50fa7b;
+@define-color orange              #ffb86c;
+@define-color pink                #ff79c6;
+@define-color purple              #bd93f9;
+@define-color red                 #ff5555;
+@define-color yellow              #f1fa8c;
 
 * {
     border: none;
@@ -23,8 +22,11 @@
 }
 
 window#waybar {
-    background: @Background-a;
-    color: @Foreground;
+    background: @background-darker;
+    color: @foreground;
+    opacity: 0.9;
+    border-radius: 1em;
+    border-bottom: 2px solid @background;
 }
 
 #workspaces {
@@ -35,23 +37,26 @@ window#waybar {
 
 #workspaces button {
     border-radius: 50%;
-    padding: 0 0.25em;
-    margin: 0 0.1em;
-    background-color: transparent;
-    color: @Comment;
-}
-
-#workspaces button.active {
-    color: @Purple;
-}
-
-#workspaces button.urgent {
-    color: @Red;
+    padding: 0.25em 0.25em;
+    background: @background;
+    color: @foreground;
 }
 
 #workspaces button:hover {
-    color: @Purple;
+    box-shadow: inherit;
+    text-shadow: inherit;
+    background-image: linear-gradient(0deg, @selection, @background-darker);
 }
+#workspaces button.active {
+    background-image: linear-gradient(0deg, @purple, @selection);
+}
+#workspaces button.urgent {
+    background-image: linear-gradient(0deg, @red, @background-darker);
+}
+#taskbar button.active {
+    background-image: linear-gradient(0deg, @selection, @background-darker);
+}
+
 
 #custom-date,
 #clock,
@@ -77,8 +82,8 @@ window#waybar {
 }
 
 #custom-power {
-    color: @Background;
-    background-color: @Red;
+    color: @background;
+    background-color: @red;
     border-radius: 5px;
     margin-right: 10px;
     margin-top: 5px;
@@ -88,7 +93,7 @@ window#waybar {
 }
 
 #tray {
-    background: @Background-a;
+    background: @background-darker;
     border-radius: 30%;
     padding: 0 0.5em;
 }
@@ -150,9 +155,9 @@ window#waybar {
 #cpu,
 #memory,
 #disk {
-    background-color: @Background;
+    background-color: @background;
     border-radius: 30%;
-    margin: 0 0.1em;
+    margin: 0 0.15em;
     padding: 0 0.1em;
     /* margin-left: 5px; */
     /* margin-right: 5px; */
